# libsysv-ipc-shim

./: CMakeLists.txt  LICENSE  README.md  build.sh  read-sysv-shm-header.c
include/sys/: ipc.h  shm.h
src/: ipc.c  shmat.c  shmctl.c  shmdt.c  shmget.c
tests/: shm.c  shm.cc  sync_shm.cc
